--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>ToDoList</title>
 </head>
 <body>
-    
+    <script src="assets/js/script.js"></script>
+    <section class="FullPage">
+        <div class="centerBox">
+            <h1 class="title" >To-Do-List</h1>
+            <input class="SearchBAr" type="text" name="search" id="name">
+        </div>
+        
+    </section>
 </body>
 </html>
